--- a/index.html
+++ b/index.html
@@ -84,24 +84,44 @@
         <section class="program">
             <h2>Etkinlik Programı</h2>
             <div class="program-item">
-                <h3>09:00 - Genel Müdür Yardımcısı Konuşması</h3>
+                <h3>09:10-09:15 Açılış</h3>
+                <p> Açılış , özlem giderme</p>
+            </div>
+            <div class="program-item">
+                <h3>09:15-09:30  Bürke Atilla ile Güne Merhaba</h3>
                 <p>Şirketimizin başarılarını değerlendireceğimiz bir açılış konuşması.</p>
             </div>
             <div class="program-item">
-                <h3>09:15 - Direktör Konuşması</h3>
+                <h3>09:30-09:50  Apoyu kurtariyoruz </h3>
+                <p>Abdullah Abi'yi kurtarabilecek miyiz?.</p>
+            </div>
+            <div class="program-item">
+                <h3>09:50 -10:30 Apo Abi ile Gündem</h3>
                 <p>Hedeflerimiz ve geleceğe dair projeler hakkında bilgi.</p>
             </div>
             <div class="program-item">
-                <h3>09:30 - Ice Breaker Etkinlikleri</h3>
+                <h3>10:30-10:40 Ara</h3>
+                <p>Ara Zamanı</p>
+            </div>
+            <div class="program-item">
+                <h3>10:40-11:30  Takım Aktarımları ve Geri Bildirimler</h3>
+                <p>Ekiplerin projelerini ve yaptıklarını paylaştığı sunumlar.</p>
+            </div>
+            <div class="program-item">
+                <h3>11:30-11:40 Takdir-Teşekkür Saati</h3>
+                <p>Başarıların takdir edildiği ve teşekkürlerin iletildiği bölüm.</p>
+            </div>
+            <div class="program-item">
+                <h3> 11:40-11:50 Ara</h3>
+                <p>Ara Zamanı</p>
+            </div>
+            <div class="program-item">
+                <h3>11:50-12:30 Sasirt Bizi Etkinliği – etkinliklerin adina bakariz</h3>
                 <p>Ekip ruhunu güçlendiren eğlenceli aktiviteler.</p>
             </div>
             <div class="program-item">
-                <h3>10:00 - Ekip Sunumları</h3>
-                <p>Ekiplerin projelerini ve başarılarını paylaştığı sunumlar.</p>
-            </div>
-            <div class="program-item">
-                <h3>12:00 - Takdir ve Teşekkür</h3>
-                <p>Başarıların takdir edildiği ve teşekkürlerin iletildiği bölüm.</p>
+                <h3> 12:30-12:35 Yeni Yıla Doğru</h3>
+                <p>Yılın son buluşmasını geride bırakıp yeni yılı kucaklarken</p>
             </div>
         </section>
 
@@ -109,20 +129,66 @@
         <section class="team-section">
             <h2>Etkinliği Düzenleyenler</h2>
             <div class="team">
-                <div class="team-member">
-                    <img src="https://via.placeholder.com/100" alt="Member">
-                    <h4>Ali Yılmaz</h4>
-                    <p>Etkinlik Koordinatörü</p>
-                </div>
-                <div class="team-member">
-                    <img src="https://via.placeholder.com/100" alt="Member">
-                    <h4>Ayşe Kaya</h4>
-                    <p>İletişim Sorumlusu</p>
-                </div>
-                <div class="team-member">
-                    <img src="https://via.placeholder.com/100" alt="Member">
-                    <h4>Fatma Demir</h4>
-                    <p>Organizasyon Asistanı</p>
+                <div class="container">
+                    <div class="progress">
+                        <div class="progress__bar">
+                            <div class="progress__bar-bullet"></div>
+                        </div>
+                        <div class="progress__bg-placeholder"></div>
+                        <ul class="progress__grid">
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                            <li class="progress__bullet-placeholder-item">
+                                <div class="progress__bullet-placehoder"></div>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="list__grid">
+                        <li class="list__item list__item--selected"><img src="http://res.cloudinary.com/dt4qeehms/image/upload/v1519439802/progress%20bar/homer.png" />
+                            <p>Ender</p>
+                        </li>
+                        <li class="list__item"><img src="http://res.cloudinary.com/dt4qeehms/image/upload/v1519439801/progress%20bar/marge.png" />
+                            <p>Buse</p>
+                        </li>
+                        <li class="list__item"><img src="http://res.cloudinary.com/dt4qeehms/image/upload/v1519439801/progress%20bar/bart.png" />
+                            <p>Buğra</p>
+                        </li>
+                        <li class="list__item"><img src="http://res.cloudinary.com/dt4qeehms/image/upload/v1519439801/progress%20bar/lisa.png" />
+                            <p>Sinem</p>
+                        </li>
+                        <li class="list__item"><img src="http://res.cloudinary.com/dt4qeehms/image/upload/v1519439801/progress%20bar/maggie.png" />
+                            <p>Sena</p>
+                        </li>
+                    </ul>
+                    <div class="btns">
+                        <button class="btn btns__back"></button>
+                        <button class="btn btns__next"></button>
+                    </div>
                 </div>
             </div>
         </section>
